# fairmofsyncondition

./: .gitignore  Explore data.ipynb  README.md  best_model.pth  pyproject.toml
.github/workflows/: python-app.yml
ML/: Delete_me.ipynb  Ex1.ipynb  Ex10.ipynb  Ex1_using_ edge_attr_lattice.ipynb  Ex2.ipynb  Ex3.ipynb  Ex4.ipynb  Ex5.ipynb  Ex6.ipynb  Ex7 copy.ipynb  Ex7.ipynb  Ex8.ipynb  Ex9.ipynb  Explore_energy_vs.ipynb  GNN_models.py  Pipeline.ipynb  Pipeline_energy.ipynb  README.md  Test.cif  Usage.ipynb  Zn2C43N6H29O8.cif  ZnC5HO5.cif  catergories.json  load_data.py  not_handeled_metal_salts.txt  target_scaler_energy.pkl  utils.py
ML/LigandsXYZ/: FDTQOZYHNDMJCM-UHFFFAOYSA-N.xyz  MGFJDEHFNMWYBD-OWOJBTEDSA-N.xyz  RESFABUZNSNZRT-UHFFFAOYSA-N.xyz  VIORWCNXRPKALR-UHFFFAOYSA-N.xyz
ML/tmp/: Metal_salts_HID32_DO0.25_SEED0_X_edgeAttr_lattice.pt  Metal_salts_HID32_DO0.25_SEED0_X_edgeAttr_lattice_AtomicNumber.pt  Metal_salts_HID32_DO0.25_SEED0_X_edgeAttr_lattice_modScherrer_Microsstrain.pt  Metal_salts_HID32_DO0.25_SEED0_X_edgeAttr_lattice_modScherrer_Microsstrain_Oms.pt  Metal_salts_HID32_DO0.25_SEED0_X_edgeAttr_lattice_tmp.pt  Metal_salts_HID32_DO0.25_SEED0__X_edgeAttr_lattice_AtomicNumber_modified_scherrer_microstrain.pt  Metal_salts_HID32_DO0.25_SEED0__X_edgeAttr_lattice_AtomicNumber_modified_scherrer_microstrain_oms.pt  (+31 more)
examples/: compile_iupacnames.py  create_graph.py  load_lmdb.py  script_for_synprediction.py
notebooks/: Explore_data.ipynb  best_model.pth
source/: conf.py  index.rst  module.rst
tests/: load_test.py  test_simiarity.py  test_size_strain.py
(+133 files in other folders)
