[tool.poetry]
name = "fairmofsyncondition"
version = "0.1.0"
description = "A python machine learning module for for accelerating the discovery and synthesis of Metal organic frameworks"
authors = ["Dinga Wonanke <bafgreat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "2.2.0"
numpy = "<2.0"
pytorch-lightning = "2.4.0"
scikit-learn = "^1.5.1"
ase = "^3.23.0"
orb-models = { git = "https://github.com/bafgreat/orb-models-mof.git" }
pynanoflann = { git = "https://github.com/dwastberg/pynanoflann.git", rev = "af434039ae14bedcbb838a7808924d6689274168" }
pandas = "^2.2.2"
pytest = "^8.3.2"
attr = "^0.3.2"


[tool.poetry.group.dev.dependencies]
sphinx = "<8.0.2"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-copybutton = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
